<resources>
    <string name="app_name">XHAW</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="courses">courses</string>
    <string name="about">ABOUT</string>
    <string name="cart">CART</string>
    <string name="home_t">Home t</string>
    <string name="contact">CONTACT</string>
    <string name="home">HOME</string>
    <string name="would_you_like_to_learn_more_empowering_the_nation">Would you like to learn more Empowering the Nation</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="selection_of_courses">SELECTION OF COURSES</string>
    <string name="want_to_learn_more">Want to learn more</string>
    <string name="download_brochure">Download Brochure</string>
    <string name="welcome">WELCOME</string>
    <string name="would_you_like_to_proceed_to_our_course_selections">Would you like to proceed to our course selections</string>
    <string name="landscaping">LANDSCAPING</string>
    <string name="life_skills">LIFE SKILLS</string>
    <string name="first_aid">FIRST AID</string>
    <string name="sewing">SEWING</string>
    <string name="choose_a_six_week_course_of_your_course">Choose a six week course of your course</string>
    <string name="choose_a_six_month_course_of_your_choice">Choose a six month course of your choice</string>
    <string name="child_minding">CHILD MINDING</string>
    <string name="cooking">COOKING</string>
    <string name="garden_maintenance">GARDEN MAINTENANCE</string>
    <string name="choose_a_six_week_course_of_your_choice">Choose a six week course of your choice</string>
    <string name="choose_a_six_month_course_of_your_choice_">Choose a six month course of your choice</string>
    <string name="six_week_courses">SIX WEEK COURSES</string>
    <string name="six_months_courses">SIX MONTHS COURSES</string>
    <string name="courses__">COURSES</string>
    <string name="total_amount">Total Amount</string>
    <string name="duration">Duration</string>
    <string name="name_of_courses">Name of courses</string>
    <string name="cart_">CART</string>
    <string name="checkout">Checkout</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="logo">TODO</string>
    <string name="button">Button</string>
    <string name="welcome_">WELCOME!</string>
    <string name="todo">TODO</string>
    <string name="login_">LOGIN</string>
    <string name="sign_up_">SIGN UP</string>
    <string name="continue_witout_an_account">Continue witout an account</string>
    <string name="who_are_we_empowering_the_nation">WHO ARE WE? EMPOWERING THE NATION</string>
    <string name="empowering_the_nation_is_an_sme_that_offers_programs_to_customers_who_can_select_from_a_wide_variety_of_courses_available_from_which_customers_can_develop_or_improve_their_skills_which_can_help_them_with_setting_up_their_own_business_or_making_them_more_desirable_when_seeking_employment_empowering_the_nation_is_offering_two_sets_of_packages_of_courses_the_first_package_of_courses_can_take_over_six_weeks_to_complete_and_the_second_package_of_courses_can_take_over_six_months_to_complete">Empowering the nation is an SME that offers programs to customers who can select from a wide variety of courses available from which customers can develop or improve their skills which can help them with setting up their own business or making them more desirable when seeking employment. Empowering the nation is offering two sets of packages of courses. The first package of courses can take over six weeks to complete and the second package of courses can take over six months to complete.</string>
    <string name="remove">Remove</string>
    <string name="remove_">Remove</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="cart__">CART</string>
    <string name="name_of_course">Name of Course</string>
    <string name="price">Price</string>
    <string name="name_of_course_">Name of Course</string>
    <string name="price_">Price</string>
    <string name="navigate">Navigate</string>
    <string name="request_a_consultant">Request a Consultant</string>
    <string name="create_invoice">Create Invoice</string>
    <string name="invoice">INVOICE</string>
    <string name="name_of_courses_">Name of Courses</string>
    <string name="duration_">Duration</string>
    <string name="price__">Price</string>
    <string name="button__">Button</string>
    <string name="child_mining">CHILD MINING</string>
    <string name="cooking_">COOKING</string>
    <string name="garden_maintenance_">GARDEN MAINTENANCE</string>
    <string name="first_aid_">FIRST AID</string>
    <string name="sewing_">SEWING</string>
    <string name="landscaping_">LANDSCAPING</string>
    <string name="life_skills_">LIFE SKILLS</string>
    <string name="please_select_one_or_multiple_courses_of_your_choice">Please select one or multiple courses of your choice</string>
    <string name="six_week">Six Week</string>
    <string name="six_month">Six Month</string>
    <string name="next">NEXT</string>
    <string name="welcome_to_empowering_the_nation">Welcome to Empowering The Nation</string>
    <string name="next_">NEXT</string>
    <string name="calculate_total_fees">Calculate Total Fees</string>
    <string name="name">NAME</string>
    <string name="phone_number_">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="please_enter_the_following_details_in_order_to_calculate_your_fees">Please enter the following details in order to calculate your fees</string>
    <string name="contact_details">Contact Details</string>
    <string name="address_">Address</string>
    <string name="_62_5th_st_melrose_johannesburg_2198">62 5th St, Melrose, Johannesburg, 2198</string>
    <string name="_3_15th_ave_houghton_estate_johannesburg_2041">3 15th Ave, Houghton Estate, Johannesburg, 2041</string>
    <string name="_35_11th_rd_kew_johannesburg_2090">35 11th Rd, Kew, Johannesburg, 2090</string>
    <string name="telephone_number">Telephone Number</string>
    <string name="_083_183_3669">083 183 3669</string>
    <string name="email_">Email</string>
    <string name="empoweringthenation_gmail_com">empoweringthenation@gmail.com</string>
    <string name="six_weeks_courses">SIX WEEKS COURSES</string>
    <string name="empowering_the_nation_s_course_page">Empowering The Nation\'s Course Page</string>
    <string name="want_to_learn_more_">WANT TO LEARN MORE?</string>
    <string name="download_brochure_">DOWNLOAD BROCHURE</string>
    <string name="precious_radebe_the_person_who_is_responsible_for_empowering_the_nation_wants_to_provide_skills_training_for_domestic_workers_and_gardeners_her_parents_and_other_elderly_relatives_were_never_given_the_chance_to_upskill_themselves_or_follow_a_formal_educational_qualification_so_this_training_school_is_her_way_of_supporting_similarly_affected_members_from_her_community">Precious Radebe, the person who is responsible for Empowering The Nation wants to provide skills training for domestic workers and gardeners. Her parents and other elderly relatives were never given the chance to upskill themselves or follow a formal educational qualification so this training school is her way of supporting similarly affected members from her community.</string>
    <string name="six_months_courses_">SIX MONTHS COURSES</string>
    <string name="six_weeks_courses_">SIX WEEKS COURSES</string>
</resources>