<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".weeklycourse">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="349dp"
        android:layout_height="88dp"
        android:layout_marginTop="68dp"
        android:text="Choose a six month course of your choice"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,TextSizeCheck" />

    <Button
        android:id="@+id/button8"
        android:layout_width="175dp"
        android:layout_height="61dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="#FF0000"
        android:text="@string/first_aid"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button9"
        android:layout_width="174dp"
        android:layout_height="61dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#FF0000"
        android:text="@string/sewing"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button11"
        android:layout_width="174dp"
        android:layout_height="62dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="#FF0000"
        android:text="@string/life_skills"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button10" />

    <Button
        android:id="@+id/button10"
        android:layout_width="176dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#FF0000"
        android:text="@string/landscaping"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button9"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>