<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".monthlycourse">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="338dp"
        android:layout_height="110dp"
        android:layout_marginTop="68dp"
        android:text="Choose a six week course of your choice"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/button12"
        android:layout_width="204dp"
        android:layout_height="78dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="#FF0000"
        android:text="@string/child_minding"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/button13"
        android:layout_width="192dp"
        android:layout_height="80dp"
        android:layout_marginTop="68dp"
        android:backgroundTint="#FF0000"
        android:text="@string/cooking"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button12" />

    <Button
        android:id="@+id/button14"
        android:layout_width="200dp"
        android:layout_height="78dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="#FF0000"
        android:text="@string/garden_maintenance"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button13" />
</androidx.constraintlayout.widget.ConstraintLayout>